tests/ui/parser/misspelled-keywords/async-move.rs
//@ edition: 2018

fn main() {
    async Move {}
    //~^ ERROR expected one of
}
